# fastapi-sub-modules

./: .gitmodules  README.md  pyproject.toml
src/: main.py
src/routers/: items.py
